--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,11 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <h1><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+    <h2 class="site-subtitle">
+      <span class="site-subtitle-quote">"{{ site.subtitle-quote }}"</span>
+      <span class="site-subtitle-author">- {{ site.subtitle-author }} -</span>
+    </h2>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
