--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,14 @@
+---
+---
+
 @charset "utf-8";
 
+@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,700,900");
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+// $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Alegreya Sans", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
@@ -42,9 +47,19 @@ $on-laptop:        800px;
 
 
 
+@import url("https://fonts.googleapis.com/css?family=Titillium+Web:400,300,700,900");
+$title-font-family: "Titillium Web", Helvetica, Arial, sans-serif;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
         "layout",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "theme"
 ;
+
+
+
+
+
+
+
