--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li><small>Crédit photo original : <a href="https://dribbble.com/shots/1738758-Mock-up">Bogdan Pavlik</a></small></li>
         </ul>
       </div>
 
